--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,10 +28,12 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.31
+          version: v1.35.0
 
   excludeFmtErrorf:
     name: exclude fmt.Errorf
@@ -85,31 +87,51 @@ jobs:
     name: packet
     runs-on: ubuntu-latest
     steps:
-      - name: Set up permissions
+      - name: Set up kubectl                     # 1. Set up kubectl
+        uses: azure/setup-kubectl@v1
+      - name: Set up /bin permissions            # 2. Set up /bin permissions
         run: |
           sudo chmod -R 777 /bin
-      - uses: actions/setup-go@v1
+      - name: Set up go                          # 3. Set up go
+        uses: actions/setup-go@v1
         with:
           go-version: 1.15
-      - name: Install cloudtest
+      - name: Install go tools                   # 4. Install go tools
         run: |
+          go get github.com/networkservicemesh/gotestmd@main
+          go get golang.org/x/tools/cmd/goimports
           go get github.com/networkservicemesh/cloudtest@master
         env:
           GO111MODULE: on
           GOBIN: /bin
-      - uses: azure/setup-kubectl@v1
-      - uses: actions/checkout@v2
-      - name: Run cloudtest
+      - name: Checkout deployments               # 5. Checkout deployments
+        uses: actions/checkout@v2
+        with:
+          repository: Bolodya1997/deployments-k8s
+          ref: sriov
+          path: Bolodya1997/deployments-k8s
+      - name: Checkout files                     # 6. Checkout files
+        uses: actions/checkout@v2
+        with:
+          path: ${{ github.repository }}
+      - name: Check generated tests              # 7. Check generated tests
+        working-directory: ${{ github.repository }}
+        run: |
+          go generate ./...
+          git diff --name-only --exit-code || ( echo "Run go generate" && false )
+      - name: Run tests with cloudtest           # 8. Run tests with cloudtest
+        working-directory: ${{ github.repository }}
         run: |
           cloudtest
         env:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
-      - uses: actions/upload-artifact@v2
+      - name: (on error) Upload logs             # 9. (on error) Upload logs
+        uses: actions/upload-artifact@v2
         if: ${{ failure() || cancelled() }}
         with:
           name: logs-${{ github.run_number }}
-          path: .tests/cloud_test/
+          path: ${{ github.repository }}/.tests/cloud_test/
 
   packet-cleanup:
     runs-on: ubuntu-latest
@@ -117,7 +139,7 @@ jobs:
       - packet
     if: ${{ always() }}
     steps:
-      - name: Set up permissions
+      - name: Set up /bin permissions
         run: |
           sudo chmod -R 777 /bin
       - uses: actions/setup-go@v1
