--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,12 @@
 ---
 name: ci
-on: pull_request
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
 jobs:
   yamllint:
     name: yamllint
@@ -33,7 +39,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.35.0
+          version: v1.35
 
   excludeFmtErrorf:
     name: exclude fmt.Errorf
@@ -66,7 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - packet
-    if: github.actor == 'nsmbot' && github.base_ref == 'master' && github.event_name == 'pull_request'
+    if: github.actor == 'nsmbot' && github.event_name == 'pull_request'
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
@@ -96,10 +102,8 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.15
-      - name: Install go tools                   # 4. Install go tools
+      - name: Install cloudtest                  # 4. Install cloudtest
         run: |
-          go get github.com/networkservicemesh/gotestmd@main
-          go get golang.org/x/tools/cmd/goimports
           go get github.com/networkservicemesh/cloudtest@master
         env:
           GO111MODULE: on
@@ -107,26 +111,20 @@ jobs:
       - name: Checkout deployments               # 5. Checkout deployments
         uses: actions/checkout@v2
         with:
-          repository: Bolodya1997/deployments-k8s
-          ref: sriov
-          path: Bolodya1997/deployments-k8s
+          repository: networkservicemesh/deployments-k8s
+          path: networkservicemesh/deployments-k8s
       - name: Checkout files                     # 6. Checkout files
         uses: actions/checkout@v2
         with:
           path: ${{ github.repository }}
-      - name: Check generated tests              # 7. Check generated tests
-        working-directory: ${{ github.repository }}
-        run: |
-          go generate ./...
-          git diff --name-only --exit-code || ( echo "Run go generate" && false )
-      - name: Run tests with cloudtest           # 8. Run tests with cloudtest
+      - name: Run tests with cloudtest           # 7. Run tests with cloudtest
         working-directory: ${{ github.repository }}
         run: |
           cloudtest
         env:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
-      - name: (on error) Upload logs             # 9. (on error) Upload logs
+      - name: (on error) Upload logs             # 8. (on error) Upload logs
         uses: actions/upload-artifact@v2
         if: ${{ failure() || cancelled() }}
         with:
@@ -148,7 +146,7 @@ jobs:
       - name: Clean up packet
         run: |
           go get github.com/networkservicemesh/cloudtest/pkg/providers/packet/packet_cleanup@master
-          packet_cleanup
+          packet_cleanup -k y -c y
         env:
           GO111MODULE: on
           GOBIN: /bin
