--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,9 +4,6 @@ on:
   pull_request:
     branches:
       - master
-  push:
-    branches:
-      - master
 jobs:
   yamllint:
     name: yamllint
@@ -72,7 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - packet
-    if: github.actor == 'nsmbot' && github.event_name == 'pull_request'
+    if: github.actor == 'nsmbot'
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
@@ -132,6 +129,7 @@ jobs:
           path: ${{ github.repository }}/.tests/cloud_test/
 
   packet-cleanup:
+    name: packet cleanup
     runs-on: ubuntu-latest
     needs:
       - packet
