--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,40 +90,40 @@ jobs:
     name: packet
     runs-on: ubuntu-latest
     steps:
-      - name: Set up kubectl                     # 1. Set up kubectl
+      - name: Set up kubectl            # 1. Set up kubectl
         uses: azure/setup-kubectl@v1
-      - name: Set up /bin permissions            # 2. Set up /bin permissions
+      - name: Set up /bin permissions   # 2. Set up /bin permissions
         run: |
           sudo chmod -R 777 /bin
-      - name: Set up go                          # 3. Set up go
+      - name: Set up go                 # 3. Set up go
         uses: actions/setup-go@v1
         with:
           go-version: 1.15
-      - name: Install cloudtest                  # 4. Install cloudtest
+      - name: Install cloudtest         # 4. Install cloudtest
         run: |
           go get github.com/networkservicemesh/cloudtest@master
         env:
           GO111MODULE: on
           GOBIN: /bin
-      - name: Checkout deployments               # 5. Checkout deployments
+      - name: Checkout deployments      # 5. Checkout deployments
         uses: actions/checkout@v2
         with:
           repository: networkservicemesh/deployments-k8s
           path: networkservicemesh/deployments-k8s
-      - name: Checkout files                     # 6. Checkout files
+      - name: Checkout files            # 6. Checkout files
         uses: actions/checkout@v2
         with:
           path: ${{ github.repository }}
-      - name: Run tests with cloudtest           # 7. Run tests with cloudtest
+      - name: Run tests with cloudtest  # 7. Run tests with cloudtest
         working-directory: ${{ github.repository }}
         run: |
           cloudtest
         env:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
-      - name: (on error) Upload logs             # 8. (on error) Upload logs
+      - name: Upload logs               # 8. Upload logs
         uses: actions/upload-artifact@v2
-        if: ${{ failure() || cancelled() }}
+        if: ${{ always() }}
         with:
           name: logs-${{ github.run_number }}
           path: ${{ github.repository }}/.tests/cloud_test/
