run only Vfio2Noop, add more logs to Vfio2Noop test
Signed-off-by: Danil Uzlov <DanilUzlov@yandex.ru>

--- a/cloudtest/tests.yaml
+++ b/cloudtest/tests.yaml
@@ -10,3 +10,6 @@ executions:
       - packet
     cluster-env:
       - KUBECONFIG
+    on-fail: |
+      ps -AF --forest -w
+      date "+%Y-%m-%d %H:%M:%S"
