--- a/.cloudtest.yaml
+++ b/.cloudtest.yaml
@@ -1,7 +1,7 @@
 ---
 version: 1.0
 root: "./.tests/cloud_test/"
-timeout: 3000  # 1 hour total timeout
+timeout: 3600  # 45 minute total timeout
 shuffle-enabled: true
 statistics:
   enabled: true
