add kubectl get all to onfail script
Signed-off-by: Danil Uzlov <DanilUzlov@yandex.ru>

--- a/cloudtest/tests.yaml
+++ b/cloudtest/tests.yaml
@@ -12,4 +12,6 @@ executions:
       - KUBECONFIG
     on-fail: |
       ps -AF --forest -w
+      kubectl get ns
+      kubectl get all --all-namespaces
       date "+%Y-%m-%d %H:%M:%S"
