--- a/cloudtest/tests.yaml
+++ b/cloudtest/tests.yaml
@@ -14,7 +14,10 @@ executions:
       date "+%Y-%m-%d %H:%M:%S"
       kubectl get ns
       kubectl get all --all-namespaces
+      echo namespaces:
+      kubectl get ns --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}'
       NAMESPACE=$(kubectl get ns --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}' | grep ns-)
+      echo found namespace $NAMESPACE
       kubectl -n $NAMESPACE get pods
       kubectl -n $NAMESPACE describe pods
       NSE=$(kubectl -n ${NAMESPACE} get pods -l app=nse-vfio --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}')
