--- a/cloudtest/tests.yaml
+++ b/cloudtest/tests.yaml
@@ -15,7 +15,7 @@ executions:
       kubectl get ns
       kubectl get all --all-namespaces
       echo namespaces:
-      kubectl get ns --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}'
+      kubectl get ns --template "{{range .items}}{{.metadata.name}}{{\"\\n\"}}{{end}}"
       NAMESPACE=$(kubectl get ns --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}' | grep ns-)
       echo found namespace $NAMESPACE
       kubectl -n $NAMESPACE get pods
