--- a/cloudtest/tests.yaml
+++ b/cloudtest/tests.yaml
@@ -16,7 +16,7 @@ executions:
       kubectl get all --all-namespaces
       echo namespaces:
       kubectl get ns --template "{{range .items}}{{.metadata.name}}{{\"\\n\"}}{{end}}"
-      NAMESPACE=$(kubectl get ns --template '{{range .items}}{{.metadata.name}}{{"\n"}}{{end}}' | grep ns-)
+      NAMESPACE=$(kubectl get ns --template "{{range .items}}{{.metadata.name}}{{\"\\n\"}}{{end}}" | grep ns-)
       echo found namespace $NAMESPACE
       kubectl -n $NAMESPACE get pods
       kubectl -n $NAMESPACE describe pods
