--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,12 +66,8 @@ jobs:
           git diff --name-only --exit-code go.sum || ( echo "Run go tidy" && false )
 
   packet:
-    name: packet (Calico ${{ matrix.calico }})
+    name: packet
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        calico: ["off", "on"]
     steps:
       - name: Set up /bin permissions   # 1. Set up /bin permissions
         run: |
@@ -95,11 +91,7 @@ jobs:
       - name: Compute suffix            # 5. Compute suffix for cloudtest input and output paths
         id: suffix
         run: |
-          if [[ "${CALICO}" == "on" ]]; then
-            echo ::set-output name=val::_calico
-          fi
-        env:
-          CALICO: ${{ matrix.calico }}
+          echo ::set-output name=val::_calico
       - name: Checkout files            # 6. Checkout files
         uses: actions/checkout@v2
         with:
@@ -112,7 +104,7 @@ jobs:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
           KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
-          CALICO: ${{ matrix.calico }}
+          CALICO: "on"
           suffix: ${{ steps.suffix.outputs.val }}
       - name: Publish test report       # 8. Publish test report
         uses: mikepenz/action-junit-report@v2.1.0
@@ -121,7 +113,7 @@ jobs:
           report_paths: "**/cloud_test${{ steps.suffix.outputs.val }}/results/junit.xml"
           suite_regex: "Test*"
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_name: "JUnit Test Report (Calico ${{ matrix.calico }})"
+          check_name: "JUnit Test Report (Calico On"
       - name: Upload logs               # 9. Upload logs
         uses: actions/upload-artifact@v2
         if: ${{ always() }}
