--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,6 +83,7 @@ jobs:
       - name: Install cloudtest         # 3. Install cloudtest
         run: |
           go get github.com/networkservicemesh/cloudtest@master
+#          GOPROXY=direct go get github.com/Mixaster995/cloudtest@no-cleanup
         env:
           GO111MODULE: on
           GOBIN: /bin
