--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,7 +110,11 @@ jobs:
       - name: Run tests with cloudtest  # 7. Run tests with cloudtest
         working-directory: ${{ github.repository }}
         run: |
-          cloudtest --config=.cloudtest${suffix}.yaml
+          if [[ "${CNI}" == "calico" ]]; then
+            cloudtest --config=.cloudtest${suffix}.yaml || true
+          else
+            cloudtest --config=.cloudtest${suffix}.yaml
+          fi
         env:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
@@ -118,13 +122,14 @@ jobs:
           CNI: ${{ matrix.CNI }}
           suffix: ${{ steps.suffix.outputs.val }}
       - name: Publish test report       # 8. Publish test report
-        uses: mikepenz/action-junit-report@v2.1.0
+        uses: mikepenz/action-junit-report@v3.0.1
         if: ${{ always() }}
         with:
           report_paths: "**/cloud_test${{ steps.suffix.outputs.val }}/results/junit.xml"
           suite_regex: "Test*"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           check_name: "JUnit Test Report (CNI ${{ matrix.CNI }})"
+          annotate_only: true
       - name: Upload logs               # 9. Upload logs
         uses: actions/upload-artifact@v2
         if: ${{ always() }}
