--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,7 +110,11 @@ jobs:
       - name: Run tests with cloudtest  # 7. Run tests with cloudtest
         working-directory: ${{ github.repository }}
         run: |
-          cloudtest --config=.cloudtest${suffix}.yaml
+          if [[ "${CNI}" == "calico" ]]; then
+            cloudtest --config=.cloudtest${suffix}.yaml || true
+          else
+            cloudtest --config=.cloudtest${suffix}.yaml
+          fi
         env:
           PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           PACKET_PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
