--- a/scripts/calico/patch.yaml
+++ b/scripts/calico/patch.yaml
@@ -6,3 +6,18 @@ metadata:
   namespace: calico-vpp-dataplane
 data:
   vpp_dataplane_interface: eno2
+
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: calico-vpp-node
+  namespace: calico-vpp-dataplane
+spec:
+  template:
+    spec:
+      containers:
+        - name: agent
+          image: artgl/calico-agent:5ff9517
+        - name: vpp
+          image: artgl/calico-vpp:5ff9517
