--- a/.cloudtest_calico.yaml
+++ b/.cloudtest_calico.yaml
@@ -10,18 +10,10 @@ import:
   - cloudtest/packet.yaml
   - cloudtest/tests.yaml
 
-retest:  # Allow to do test re-run if some kind of failures are detected, line CNI network plugin errors.
-  count: 1  # Allow 5 times to do restart
-  warmup-time: 15  # Put 15 seconds warmup for cluster instance to be used again.
-  allowed-retests: 2  # If cluster instance have few attempts with retest requests one after another, we need to restart cluster.
+retest:  # Allow to do test re-run if some kind of failures are detected.
+  count: 2  # Allow 2 times to do restart
   pattern:
-    - "NetworkPlugin cni failed to set up pod"    # Error in AWS dur to leak of IPs or not ability to assign them.
-    - "etcdserver: request timed out"  # Error in any could, reason unknown.
-    - "unable to establish connection to VPP (VPP API socket file /run/vpp/api.sock does not exist)"  # a VPP is not started, it will be re-started in general, but will cause test fail.
-    # Sometimes (rarely) docker registry is unavailable for a moment
-    - "Error response from daemon: Get https://.*docker.io/.*: dial tcp: lookup registry"
-    - "Error response from daemon: Get https://.*docker.io/.*: net/http: request canceled while waiting for connection"
-    - "Failed create pod sandbox"
+    - "rx 0 pong packets"    # Error in VFIO tests
 reporting:
   junit-report: "results/junit.xml"
 health-check:
