--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,7 +93,8 @@ jobs:
       - name: Checkout deployments      # 4. Checkout deployments
         uses: actions/checkout@v2
         with:
-          repository: networkservicemesh/deployments-k8s
+          repository: glazychev-art/deployments-k8s
+          ref: 'packet_vfio_test'
           path: networkservicemesh/deployments-k8s
       - name: Compute suffix            # 5. Compute suffix for cloudtest input and output paths
         id: suffix
