Add calico support
Signed-off-by: Artem Glazychev <artem.glazychev@xored.com>

--- a/scripts/calico/patch.yaml
+++ b/scripts/calico/patch.yaml
@@ -5,4 +5,4 @@ metadata:
   name: calico-vpp-config
   namespace: calico-vpp-dataplane
 data:
-  vpp_dataplane_interface: eno2
+  vpp_dataplane_interface: ens6f1
