--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,11 @@ on:
   push:
     branches:
       - 'release/**'
+
+concurrency:
+  group: '${{ github.event.pull_request.number }}'
+  cancel-in-progress: true
+
 jobs:
   yamllint:
     name: yamllint
@@ -37,7 +42,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.18
+          go-version: 1.16
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -75,40 +80,44 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CNI: ["default", "default2"]
+        CNI: ["default", "calico"]
     steps:
-      - name: Set up /bin permissions   # 1. Set up /bin permissions
+      - name: Set up /bin permissions
         run: |
           sudo chmod -R 777 /bin
       - name: Set envs
         run: |
-          id=$(cat /proc/sys/kernel/random/uuid | sed 's/[-]//g' | head -c 8)
-          echo CLUSTER_NAME=nsm-${id} >> $GITHUB_ENV
+          id=${{ matrix.CNI }}-${{ github.run_number }}
+          echo CLUSTER_NAME=nsm-ci-${id} >> $GITHUB_ENV
           echo SSH_KEY=nsm-ssh-${id} >> $GITHUB_ENV
-      - name: Set up go                 # 2. Set up go
+      - name: Set up go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.18
+          go-version: 1.16
       - name: Checkout files
         uses: actions/checkout@v2
         with:
           path: ${{ github.repository }}
-      - name: Install kind         # 3. Install kind
+
+      - name: Install kind
         uses: engineerd/setup-kind@v0.5.0
         with:
-          config: ${{ github.repository }}/cluster-config.yaml
+          config: ${{ github.repository }}/kind-cluster-config.yaml
           version: v0.14.0
           image: kindest/node:v1.24.0
+
       - name: Check kind
         run: |
           kubectl version
           kubectl get pods -n kube-system
+
       - name: Install clusterctl
         run: |
           curl -L https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.2.1/clusterctl-linux-amd64 -o clusterctl
           chmod +x ./clusterctl
           mv ./clusterctl /usr/local/bin/clusterctl
           clusterctl version
+
       - name: Install metal CLI
         run: |
           curl -L https://github.com/equinix/metal-cli/releases/download/v0.9.0/metal-linux-amd64 -o metal
@@ -116,14 +125,13 @@ jobs:
           mv ./metal /usr/local/bin/metal
           metal -v
 
-      - name: Checkout deployments      # 4. Checkout deployments
+      - name: Checkout deployments
         uses: actions/checkout@v2
         with:
-          repository: glazychev-art/deployments-k8s
+          repository: networkservicemesh/deployments-k8s
           path: networkservicemesh/deployments-k8s
-          ref: 'clusterctl_vfio'
 
-      - name: Setup ssh  # 7. Run tests with cloudtest
+      - name: Setup ssh
         working-directory: ${{ github.repository }}
         id: setup_ssh
         run: |
@@ -149,36 +157,40 @@ jobs:
         env:
           PACKET_API_KEY: ${{ secrets.PACKET_AUTH_TOKEN }}
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
           FACILITY: da11
           NODE_OS: ubuntu_20_04
           KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
+          CNI: ${{ matrix.CNI }}
           CONTROLPLANE_NODE_TYPE: "n3.xlarge.x86"
           WORKER_NODE_TYPE: "n3.xlarge.x86"
+
       - name: Integration tests
         run: |
           export KUBECONFIG=$HOME/.kube/config_packet
-          go test -count 1 -timeout 1h40m -race -v ./tests_default
+          if [[ "${{ matrix.CNI }}" == "calico" ]]; then
+            go test -count 1 -timeout 1h50m -race -v ./tests_${{ matrix.CNI }} || true
+          else
+            go test -count 1 -timeout 1h50m -race -v ./tests_${{ matrix.CNI }}
+          fi
         env:
-          ARTIFACTS_DIR: ${{ matrix.CNI }}-logs/
+          ARTIFACTS_DIR: logs
         working-directory: ${{ github.repository }}
 
-      - name: Upload logs               # 9. Upload logs
+      - name: Upload logs
         uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
           name: ${{ matrix.CNI }}-logs
-          path: ${{ github.repository }}/tests_default/${{ matrix.CNI }}-logs
+          path: ${{ github.repository }}/tests_${{ matrix.CNI }}/logs
 
-      - name: Cleanup               # 9. Upload logs
+      - name: Cleanup
         if: ${{ always() }}
         working-directory: ${{ github.repository }}
         run: |
           export KUBECONFIG=$HOME/.kube/config
-          yes | metal ssh-key delete --id ${{ steps.setup_ssh.outputs.ssh_id }}
-          EIP=$(metal ip get -p ${PROJECT_ID} -o json | jq -r '.[] | select( .tags != null and any(.tags[]; endswith(env.CLUSTER_NAME))) | .id')
-          metal ip remove -i $EIP
-          scripts/cleanup-cluster.sh ${CLUSTER_NAME}
+          scripts/cleanup-cluster.sh ${{ steps.setup_ssh.outputs.ssh_id }}
         env:
           PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
