Update calico version
Signed-off-by: Artem Glazychev <artem.glazychev@xored.com>

--- a/scripts/calico/patch.yaml
+++ b/scripts/calico/patch.yaml
@@ -5,4 +5,34 @@ metadata:
   name: calico-vpp-config
   namespace: calico-vpp-dataplane
 data:
-  vpp_dataplane_interface: ens6f1
+  CALICOVPP_INTERFACES: |-
+    {
+      "maxPodIfSpec": {
+        "rx": 10, "tx": 10, "rxqsz": 1024, "txqsz": 1024
+      },
+      "defaultPodIfSpec": {
+        "rx": 1, "tx":1, "isl3": true
+      },
+      "vppHostTapSpec": {
+        "rx": 1, "tx":1, "rxqsz": 1024, "txqsz": 1024, "isl3": false
+      },
+      "uplinkInterfaces": [
+        {
+          "interfaceName": "ens6f1"
+        }
+      ]
+    }
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: calico-vpp-node
+  namespace: calico-vpp-dataplane
+spec:
+  template:
+    spec:
+      containers:
+        - name: agent
+          image: artgl/calico-agent:82c88a14
+        - name: vpp
+          image: artgl/calico-vpp:82c88a14
