--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,7 +91,7 @@ jobs:
           eval `ssh-agent -s`
           ssh-add /tmp/sshkey
           ssh_id=$(metal ssh-key create --key "$(cat /tmp/sshkey.pub)" --label ${SSH_KEY} -o json | jq -r '.id')
-          echo 'ssh_id=${ssh_id}' >> $GITHUB_OUTPUT
+          echo ssh_id=${ssh_id} >> $GITHUB_OUTPUT
         env:
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
 
