--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,10 @@ jobs:
           id=${{ matrix.CNI }}-${{ github.run_number }}
           echo CLUSTER_NAME=nsm-ci-${id} >> $GITHUB_ENV
           echo SSH_KEY=nsm-ssh-${id} >> $GITHUB_ENV
+          echo FACILITY=ch3 >> $GITHUB_ENV
+          if [[ "${{ matrix.CNI }}" == "calico-vpp" ]]; then
+            echo FACILITY=da11 >> $GITHUB_ENV
+          fi
       - name: Set up go
         uses: actions/setup-go@v1
         with:
@@ -111,7 +115,6 @@ jobs:
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
-          FACILITY: ch3
           NODE_OS: ubuntu_20_04
           KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
           CNI: ${{ matrix.CNI }}
