patchesStrategicMerge field in kustomization.yaml files is deprecated.
Signed-off-by: Vitaliy Guschin <vitaliy.guschin@spirent.com>

--- a/scripts/calico/kustomization.yaml
+++ b/scripts/calico/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - https://raw.githubusercontent.com/projectcalico/vpp-dataplane/v3.26.0/yaml/generated/calico-vpp-nohuge.yaml
 
-patchesStrategicMerge:
-  - patch.yaml
+patches:
+  - path: patch.yaml
