--- a/scripts/defaultCNI/kustomization.yaml
+++ b/scripts/defaultCNI/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/calico.yaml
 
-patchesStrategicMerge:
-  - patch.yaml
+patches:
+  - path: patch.yaml
