--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,20 +102,21 @@ jobs:
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
 
       - name: Set up go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v5
         with:
           go-version: 1.20.11
       - name: Checkout files
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           path: ${{ github.repository }}
 
+
       - name: Install kind
-        uses: engineerd/setup-kind@v0.5.0
+        uses: helm/kind-action@v1
         with:
           config: ${{ github.repository }}/kind-cluster-config.yaml
           version: v0.20.0
-          image: kindest/node:v1.28.0
+          node_image: kindest/node:v1.28.0
 
       - name: Check kind
         run: |
@@ -128,6 +129,19 @@ jobs:
           chmod +x ./clusterctl
           mv ./clusterctl /usr/local/bin/clusterctl
           clusterctl version
+
+      - name: Install metal CLI
+        run: |
+          curl -L https://github.com/equinix/metal-cli/releases/download/v0.16.0/metal-linux-amd64 -o metal
+          chmod +x ./metal
+          mv ./metal /usr/local/bin/metal
+          metal -v
+
+      - name: Checkout deployments
+        uses: actions/checkout@v4
+        with:
+          repository: networkservicemesh/deployments-k8s
+          path: networkservicemesh/deployments-k8s
 
       - name: Setup ssh
         working-directory: ${{ github.repository }}
@@ -142,7 +156,7 @@ jobs:
           METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
 
       - name: Setup cluster
-        uses: nick-fields/retry@v2.8.3
+        uses: nick-fields/retry@v3
         with:
           timeout_minutes: 60
           max_attempts: 3
@@ -179,7 +193,7 @@ jobs:
         working-directory: ${{ github.repository }}
 
       - name: Upload logs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
           name: ${{ matrix.config.node_type }}-${{ matrix.config.CNI }}-logs
