--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -116,7 +116,7 @@ jobs:
         with:
           config: ${{ github.repository }}/kind-cluster-config.yaml
           version: v0.20.0
-          image: kindest/node:v1.28.0
+          node_image: kindest/node:${{ vars.NSM_KUBERNETES_VERSION }}
 
       - name: Check kind
         run: |
@@ -160,7 +160,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PROJECT_ID: 383890d0-f5d1-4de1-881a-4d1ede549d18
           NODE_OS: ubuntu_20_04
-          KUBERNETES_VERSION: ${{ secrets.NSM_KUBERNETES_VERSION }}
+          KUBERNETES_VERSION: ${{ vars.NSM_KUBERNETES_VERSION }}
           CNI: ${{ matrix.config.CNI }}
           CONTROLPLANE_NODE_TYPE: ${{ matrix.config.node_type }}
           WORKER_NODE_TYPE: ${{ matrix.config.node_type }}
@@ -168,6 +168,7 @@ jobs:
       - name: Integration tests
         run: |
           export KUBECONFIG=$HOME/.kube/config_packet
+          kubectl version
           if [[ "${{ matrix.config.CNI }}" == "calico-vpp" ]]; then
             go test -count 1 -timeout 1h50m -race -v ./test/${{ matrix.config.CNI }} -parallel 4 || true
           elif [ "${SRIOV_ENABLED}" == true ]; then
